--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,18 @@
     "validate": "npm run lint && npm run format:check"
   },
   "dependencies": {
+    "@auth/core": "^0.37.4",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@prisma/client": "^6.1.0",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.15.0",
     "next": "15.1.2",
+    "next-auth": "^4.24.11",
+    "prisma": "^6.1.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.0.0"
