--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,9 @@
     "react-hook-form": "^7.54.2",
     "zod": "^3.24.1"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
