--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,20 @@
 # dependencies
 node_modules
-/.pnp
+.pnp
 .pnp.js
 
 # testing
-/coverage
+coverage
 
 # next.js
-/.next/
-/out/
-/build
-.next
-
-# production
-/build
+.next/
+out/
+build
+dist
 
 # misc
 .DS_Store
 *.pem
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 # debug
 npm-debug.log*
@@ -30,7 +22,17 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# database
+*.db
+*.db-journal
+prisma/dev.db
+prisma/dev.db-journal
 
 # vercel
 .vercel
@@ -42,5 +44,3 @@ next-env.d.ts
 # IDE
 .idea
 .vscode
-*.swp
-*.swo
